--- a/pages/recipe.html
+++ b/pages/recipe.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" type="image/png" href="/favicon.png?123" sizes="16x16 32x32 64x64">
 
     <link rel="apple-touch-icon" sizes="120x120" href="apple-touch-icon-precomposed.png">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
   </head>
  
   <body>
@@ -80,9 +80,9 @@
     <!--JS FILES-->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-    <script type="text/javascript" src="data/recipes.js"></script>
-    <script type="text/javascript" src="data/activities.js"></script>
-    <script type="text/javascript" src="js/script-index.js"></script> 
+    <script type="text/javascript" src="../data/recipes.js"></script>
+    <script type="text/javascript" src="../data/activities.js"></script>
+    <script type="text/javascript" src="../js/script-index.js"></script> 
 
   </body>
 
